deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-java
  namespace: default
  labels:
    app: hello-world-java
    version: v2
spec:
  replicas: 2
  minReadySeconds: 30
  selector:
    matchLabels:
      app: hello-world-java
      version: v2
  template:
    metadata:
      labels:
        app: hello-world-java

    spec:
      containers:
      - name: hello-world-java
        image: mgsair/hello-world-java:0.0.2.RELEASE
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
