ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-java
  labels:
    name: hello-world-java
spec:
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/hello-world/*"
        backend:
          service:
            name: hello-world-java
            port: 
              number: 5000
      #- pathType: Prefix
      #  path: "/python/*"
      #  backend:
      #    service:
      #      name: hello-world-python
      #      port: 
      #        number: 5100
